feat: Add Plan Studies page with comprehensive study abroad planning guide
## 사용자 요청
- https://www.studyinkorea.go.kr/ko/plan/main.do 페이지를 참고하여 Plan your studies 페이지 구현

## 구현 내용

### 1. 새로운 페이지 생성
- src/pages/PlanStudies.tsx 컴포넌트 생성
- 12가지 주요 카테고리 섹션 구현
- 추가 정보, 스토리, 빠른 링크 섹션 추가

### 2. 페이지 구조
- Hero Section: 유학 계획하기 소개
- Main Categories: 10개 카드 (교육제도, 학교유형, 인증대학 등)
- Additional Info: 3개 카드 (학교찾기, 온라인 한국어, 상담)
- Stories: 3개 YouTube 비디오 임베드
- Quick Links: 6개 빠른 접근 버튼
- CTA Section: 회원가입/AI 상담 유도

### 3. 컴포넌트 기능
- PlanCard: 재사용 가능한 카드 컴포넌트
  - 아이콘, 제목, 설명, 링크 지원
  - 호버 효과 (그림자, 변형, 색상 전환)
  - 내부/외부 링크 처리
- YouTube 비디오 임베드
- 반응형 그리드 레이아웃 (1/2/3 컬럼)

### 4. 다국어 지원 (13개 언어)
모든 언어 파일에 planStudies 섹션 추가:
- en, ko: 완전 번역
- zh, ja, vi, mn: 중국어, 일본어, 베트남어, 몽골어
- ar, hi: 아랍어, 힌디어
- es, fr, de: 스페인어, 프랑스어, 독일어
- ru, th: 러시아어, 태국어

### 5. 라우팅 설정
- App.tsx: /plan-studies 라우트 추가
- Header.tsx: 네비게이션 링크 활성화

### 6. 스타일링
- index.css: .bg-grid-pattern 유틸리티 클래스 추가
- 그리드 패턴 배경 (라이트/다크 모드 지원)
- 브랜드 컬러 (primary green, gold) 일관성 유지
- 그라데이션 배경, 카드 호버 효과

### 7. 문서화
- docs/PLAN_STUDIES_PAGE.md 추가
  - 페이지 구조 상세 설명
  - 컴포넌트 사용법
  - 향후 개선 계획
  - SEO 및 분석 고려사항

## 기술 스택
- React + TypeScript
- react-i18next (다국어)
- react-router-dom (라우팅)
- lucide-react (아이콘)
- shadcn/ui (Card, Button)
- Tailwind CSS (스타일링)

## 참고 자료
- Study in Korea 공식 웹사이트
- 한국 유학 정보 구조 참고
- 카테고리 및 콘텐츠 구성 기반

## 디자인 특징
- 카드 기반 모던 레이아웃
- 아이콘을 활용한 시각적 계층
- 호버 애니메이션 (smooth transitions)
- 모바일 우선 반응형 디자인
- 접근성 고려 (semantic HTML, ARIA)

## 향후 개선 계획
- 대학 검색 기능 구현
- 필터/정렬 시스템
- 대학 비교 도구
- 진행 상황 추적기
- 예산 계산기

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -163,5 +163,102 @@
     "saving": "Saving...",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile. Please try again."
+  },
+  "planStudies": {
+    "hero": {
+      "title": "خطط دراستك",
+      "subtitle": "ليس صعبًا على الإطلاق.",
+      "description": "قم بإعداد كل شيء من اختيار المدرسة إلى معلومات طلب التأشيرة في كوريا."
+    },
+    "sections": {
+      "planYourStudy": "خطط دراستك",
+      "additionalInfo": "تعرف على المزيد حول الدراسة بالخارج",
+      "stories": "القصص",
+      "quickMore": "روابط سريعة"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "نظام التعليم الكوري",
+        "desc": "ينقسم نظام التعليم العالي في كوريا إلى برامج البكالوريوس والماجستير والدكتوراه في الجامعات والكليات. تتوفر أيضًا برامج التدريب اللغوي في المؤسسات التابعة للجامعات."
+      },
+      "schoolType": {
+        "title": "أنواع المدارس",
+        "desc": "إذا كنت تفكر في الدراسة في كوريا، تحقق من معلومات وبرامج المدارس المختلفة."
+      },
+      "certifiedUniversity": {
+        "title": "الجامعات المعتمدة المتميزة",
+        "desc": "تحقق من الجامعات المعتمدة في كوريا ذات القدرة العالية على التدويل."
+      },
+      "examAndKorean": {
+        "title": "اختبار TOPIK ودراسة اللغة الكورية",
+        "desc": "تعرف على اختبار الكفاءة في اللغة الكورية وطرق دراسة الكورية."
+      },
+      "expenses": {
+        "title": "نفقات الدراسة",
+        "desc": "لحياة دراسية ناجحة بالخارج، تحتاج إلى النظر في نفقات أخرى بجانب الرسوم الدراسية الجامعية."
+      },
+      "scholarship": {
+        "title": "المنح الدراسية",
+        "desc": "يتم توفير منح دراسية متنوعة لدعم فرص الدراسة للطلاب الدوليين."
+      },
+      "visa": {
+        "title": "تأشيرة الطالب وحالة الإقامة",
+        "desc": "تحقق من الأهلية لكل برنامج والمستندات المطلوبة لطلب التأشيرة."
+      },
+      "flowChart": {
+        "title": "مخطط تدفق التقديم",
+        "desc": "تعرف مسبقًا على عملية التقديم للجامعة التي تريد التقدم إليها."
+      },
+      "onlineApplication": {
+        "title": "التقديم عبر الإنترنت",
+        "desc": "بمجرد أن تقرر الدراسة بالخارج، يمكنك التقديم عبر الإنترنت بسهولة من خلال Study in Korea."
+      },
+      "guidebook": {
+        "title": "دليل الإرشاد",
+        "desc": "احصل على المساعدة من خلال أدلة الإرشاد من التحضير للدراسة إلى حياة الدراسة بالخارج."
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "ابحث عن القسم والجامعة",
+        "desc": "ابحث حسب اسم الجامعة أو التخصص للعثور على معلومات المدرسة المثيرة للاهتمام في لمحة."
+      },
+      "onlineKorean": {
+        "title": "تعلم اللغة الكورية عبر الإنترنت",
+        "desc": "ارجع إلى موارد التعلم عبر الإنترنت المختلفة بما في ذلك اللغة الكورية من خلال الثقافة الكورية واللغة الكورية العملية في معهد الملك سيجونج."
+      },
+      "consultation": {
+        "title": "استشارة عبر الإنترنت",
+        "desc": "نجيب على استفساراتك بسرعة."
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "تدريب دعوة خريجي GKS",
+        "desc": "فرصة ثمينة ستفتح إمكانيات جديدة للمستقبل. تدعم الحكومة الكورية المنح الدراسية."
+      },
+      "interview": {
+        "title": "مقابلة الطالب الدولي",
+        "desc": "جئت للدراسة في كوريا بمنحة حكومية. قضيت وقتًا مفيدًا جدًا في كوريا."
+      },
+      "opportunity": {
+        "title": "فرصة الدراسة في كوريا",
+        "desc": "يتم توفير فرص للطلاب الدوليين لبرامج درجة البكالوريوس والدراسات العليا كل عام."
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "ابحث عن معلومات القسم والجامعة",
+      "guidebook": "قم بتنزيل دليل الإرشاد",
+      "certifiedUniversity": "تحقق من الجامعات المعتمدة المتميزة",
+      "onlineApplication": "قدم عبر الإنترنت بسهولة",
+      "topik": "تحقق من طلب اختبار TOPIK والجدول الزمني",
+      "scholarship": "ابحث عن المنح الدراسية المتاحة"
+    },
+    "cta": {
+      "title": "هل أنت مستعد لبدء رحلتك؟",
+      "description": "ابدأ تخطيط دراستك بالخارج معنا اليوم",
+      "getStarted": "البدء",
+      "askQuestions": "اطرح الأسئلة"
+    }
   }
 }
