--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -163,5 +163,102 @@
     "saving": "Saving...",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile. Please try again."
+  },
+  "planStudies": {
+    "hero": {
+      "title": "अपनी पढ़ाई की योजना बनाएं",
+      "subtitle": "बिल्कुल भी मुश्किल नहीं।",
+      "description": "स्कूल चयन से लेकर वीजा आवेदन की जानकारी तक सब कुछ कोरिया में तैयार करें।"
+    },
+    "sections": {
+      "planYourStudy": "अपनी पढ़ाई की योजना बनाएं",
+      "additionalInfo": "विदेश में पढ़ाई के बारे में अधिक जानें",
+      "stories": "कहानियां",
+      "quickMore": "त्वरित लिंक"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "कोरिया की शिक्षा प्रणाली",
+        "desc": "कोरिया की उच्च शिक्षा प्रणाली विश्वविद्यालयों और कॉलेजों में स्नातक, मास्टर और डॉक्टरेट कार्यक्रमों में विभाजित है। विश्वविद्यालय से संबद्ध संस्थानों में भाषा प्रशिक्षण कार्यक्रम भी उपलब्ध हैं।"
+      },
+      "schoolType": {
+        "title": "स्कूल के प्रकार",
+        "desc": "यदि आप कोरिया में पढ़ाई करने पर विचार कर रहे हैं, तो विभिन्न स्कूल की जानकारी और कार्यक्रमों की जाँच करें।"
+      },
+      "certifiedUniversity": {
+        "title": "प्रमाणित उत्कृष्ट विश्वविद्यालय",
+        "desc": "उच्च अंतर्राष्ट्रीयकरण क्षमता वाले कोरिया में प्रमाणित विश्वविद्यालयों की जाँच करें।"
+      },
+      "examAndKorean": {
+        "title": "TOPIK और कोरियाई अध्ययन",
+        "desc": "कोरियाई भाषा प्रवीणता परीक्षा और कोरियाई सीखने के तरीकों के बारे में जानें।"
+      },
+      "expenses": {
+        "title": "अध्ययन व्यय",
+        "desc": "सफल विदेश में अध्ययन जीवन के लिए, आपको विश्वविद्यालय की फीस के अलावा अन्य खर्चों पर विचार करना होगा।"
+      },
+      "scholarship": {
+        "title": "छात्रवृत्तियां",
+        "desc": "अंतर्राष्ट्रीय छात्रों के अध्ययन के अवसरों का समर्थन करने के लिए विभिन्न छात्रवृत्तियां प्रदान की जाती हैं।"
+      },
+      "visa": {
+        "title": "छात्र वीजा और निवास स्थिति",
+        "desc": "प्रत्येक कार्यक्रम के लिए पात्रता और वीजा आवेदन के लिए आवश्यक दस्तावेजों की जाँच करें।"
+      },
+      "flowChart": {
+        "title": "आवेदन फ्लोचार्ट",
+        "desc": "जिस विश्वविद्यालय में आप आवेदन करना चाहते हैं उसकी आवेदन प्रक्रिया के बारे में पहले से जानें।"
+      },
+      "onlineApplication": {
+        "title": "ऑनलाइन आवेदन",
+        "desc": "एक बार जब आप विदेश में पढ़ाई करने का फैसला कर लेते हैं, तो आप Study in Korea के माध्यम से आसानी से ऑनलाइन आवेदन कर सकते हैं।"
+      },
+      "guidebook": {
+        "title": "गाइडबुक",
+        "desc": "अध्ययन की तैयारी से लेकर विदेश में अध्ययन जीवन तक गाइडबुक के माध्यम से मदद प्राप्त करें।"
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "विभाग और विश्वविद्यालय खोजें",
+        "desc": "रुचि के स्कूल की जानकारी को एक नज़र में खोजने के लिए विश्वविद्यालय या प्रमुख नाम से खोजें।"
+      },
+      "onlineKorean": {
+        "title": "ऑनलाइन कोरियाई सीखना",
+        "desc": "किंग सेजोंग इंस्टीट्यूट में कोरियाई संस्कृति और व्यावहारिक कोरियाई के माध्यम से कोरियाई सहित विभिन्न ऑनलाइन शिक्षण संसाधनों को देखें।"
+      },
+      "consultation": {
+        "title": "ऑनलाइन परामर्श",
+        "desc": "हम आपकी पूछताछ का शीघ्रता से उत्तर देते हैं।"
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "GKS पूर्व छात्र निमंत्रण प्रशिक्षण",
+        "desc": "एक मूल्यवान अवसर जो भविष्य के लिए नई संभावनाओं को खोलेगा। कोरियाई सरकार छात्रवृत्ति का समर्थन करती है।"
+      },
+      "interview": {
+        "title": "अंतर्राष्ट्रीय छात्र साक्षात्कार",
+        "desc": "मैं सरकारी छात्रवृत्ति के साथ कोरिया में पढ़ाई करने आया था। मैंने कोरिया में बहुत लाभदायक समय बिताया।"
+      },
+      "opportunity": {
+        "title": "कोरिया में अध्ययन का अवसर",
+        "desc": "अंतर्राष्ट्रीय छात्रों को हर साल स्नातक और स्नातकोत्तर डिग्री कार्यक्रमों के लिए अवसर प्रदान किए जाते हैं।"
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "विभाग और विश्वविद्यालय की जानकारी खोजें",
+      "guidebook": "गाइडबुक डाउनलोड करें",
+      "certifiedUniversity": "प्रमाणित उत्कृष्ट विश्वविद्यालयों की जाँच करें",
+      "onlineApplication": "आसानी से ऑनलाइन आवेदन करें",
+      "topik": "TOPIK परीक्षा आवेदन और कार्यक्रम की जाँच करें",
+      "scholarship": "उपलब्ध छात्रवृत्तियां खोजें"
+    },
+    "cta": {
+      "title": "अपनी यात्रा शुरू करने के लिए तैयार हैं?",
+      "description": "आज ही हमारे साथ अपनी विदेश में अध्ययन की योजना शुरू करें",
+      "getStarted": "शुरू करें",
+      "askQuestions": "प्रश्न पूछें"
+    }
   }
 }
