--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -427,5 +427,102 @@
       "visa": "F-1 비자 신청 절차를 알려주세요",
       "cost": "미국 유학 비용은 얼마나 드나요?"
     }
+  },
+  "planStudies": {
+    "hero": {
+      "title": "유학 계획하기",
+      "subtitle": "어렵지 않아요.",
+      "description": "학교 선택부터 비자 신청 정보까지 코리아에서 준비하세요."
+    },
+    "sections": {
+      "planYourStudy": "공부를 계획해 보세요",
+      "additionalInfo": "더 알아보는 유학 정보",
+      "stories": "스토리",
+      "quickMore": "바로가기"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "한국의 교육제도",
+        "desc": "한국의 고등교육시스템은 대학과 전문대학에서 학사, 석사, 박사 과정으로 나뉘며 한국어 공부를 위한 대학 부설 어학연수 프로그램도 운영하고 있습니다."
+      },
+      "schoolType": {
+        "title": "학교 유형",
+        "desc": "한국 유학을 고민 중이라면 다양한 학교 정보 및 과정을 확인해 보세요."
+      },
+      "certifiedUniversity": {
+        "title": "우수 인증 대학",
+        "desc": "국제화 역량이 높은 한국의 인증 대학을 확인해 보세요."
+      },
+      "examAndKorean": {
+        "title": "TOPIK & 한국어 학습",
+        "desc": "한국어 능력 시험과 한국어를 공부하는 방법을 알아보세요."
+      },
+      "expenses": {
+        "title": "유학경비",
+        "desc": "성공적인 유학 생활을 원한다면 대학 등록금 외에 유학 생활에 필요한 기타 경비를 고려해야 합니다."
+      },
+      "scholarship": {
+        "title": "장학금",
+        "desc": "외국인 학생들에게 수학할 기회를 부여하며 다양한 장학금을 지원하고 있습니다."
+      },
+      "visa": {
+        "title": "학생비자 및 체류자격",
+        "desc": "과정별 지원 자격을 알아보고 비자신청에 필요한 제출 서류를 확인해 보세요."
+      },
+      "flowChart": {
+        "title": "플로우차트",
+        "desc": "지원하고자 하는 대학의 전형 방법을 미리 알아보고 준비하세요."
+      },
+      "onlineApplication": {
+        "title": "온라인 원서 접수",
+        "desc": "유학을 결정했다면 스터디인코리아에서 간편하게 온라인원서 접수를 진행하실 수 있습니다."
+      },
+      "guidebook": {
+        "title": "가이드북",
+        "desc": "한국 유학 준비부터 유학 생활까지, 가이드북을 통해 도움을 받을 수 있습니다."
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "원하는 학과, 대학 찾기",
+        "desc": "대학 또는 전공 이름으로 검색하시면 관심있는 학교 정보를 한눈에 찾아 보실 수 있습니다."
+      },
+      "onlineKorean": {
+        "title": "온라인 한국어 학습",
+        "desc": "한국 문화로 배우는 한국어, 세종학당 실용한국어 등 다양하게 지원하는 온라인 학습을 참고하세요."
+      },
+      "consultation": {
+        "title": "온라인 상담",
+        "desc": "궁금한 사항을 문의하시면 빠르게 답변드리고 있습니다."
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "정부 초청 외국인 장학생(GKS) 동문 초청 연수",
+        "desc": "미래에 대한 새로운 가능성을 열어줄 소중한 기회, 대한민국 정부에서 장학금을 지원합니다."
+      },
+      "interview": {
+        "title": "유학생 인터뷰",
+        "desc": "정부 초청 장학금을 받아서 한국에 유학하러 왔습니다. 한국에서 정말 유익한 시간을 보냈습니다."
+      },
+      "opportunity": {
+        "title": "한국에서 공부할 수 있는 기회",
+        "desc": "매년 학부 학위과정, 대학원 학위과정 등 외국인 유학생들에게 기회를 제공합니다."
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "궁금한 대학&학과 정보를 찾아보세요",
+      "guidebook": "기대되는 유학, 가이드북 다운로드 받으세요",
+      "certifiedUniversity": "역량 있는 학교, 우수 인증 대학을 확인하세요",
+      "onlineApplication": "온라인 원서 접수 간단하게 신청하세요",
+      "topik": "TOPIK 시험 신청 및 일정 확인하기",
+      "scholarship": "지원받을 수 있는 장학금을 찾아보세요"
+    },
+    "cta": {
+      "title": "유학 여정을 시작할 준비가 되셨나요?",
+      "description": "지금 바로 유학 계획을 시작하세요",
+      "getStarted": "시작하기",
+      "askQuestions": "질문하기"
+    }
   }
 }
