--- a/src/i18n/locales/mn.json
+++ b/src/i18n/locales/mn.json
@@ -173,5 +173,102 @@
     "saving": "Saving...",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile. Please try again."
+  },
+  "planStudies": {
+    "hero": {
+      "title": "Сургуулиа төлөвлөх",
+      "subtitle": "Огт хэцүү биш.",
+      "description": "Сургууль сонгохоос эхлээд виз мэдүүлэх мэдээлэл хүртэл бүгдийг Солонгост бэлтгээрэй."
+    },
+    "sections": {
+      "planYourStudy": "Сургуулиа төлөвлөх",
+      "additionalInfo": "Гадаад сургуулийн талаар илүү ихийг мэдэх",
+      "stories": "Түүхүүд",
+      "quickMore": "Шуурхай холбоосууд"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "Солонгосын Боловсролын Систем",
+        "desc": "Солонгосын дээд боловсролын систем нь их сургууль болон коллежуудад бакалавр, магистр, докторын хөтөлбөрүүдэд хуваагддаг. Их сургуулийн харьяа байгууллагуудад хэлний сургалтын хөтөлбөрүүд бас байдаг."
+      },
+      "schoolType": {
+        "title": "Сургуулийн төрлүүд",
+        "desc": "Хэрэв та Солонгост суралцахыг төлөвлөж байгаа бол олон төрлийн сургуулийн мэдээлэл болон хөтөлбөрүүдийг үзээрэй."
+      },
+      "certifiedUniversity": {
+        "title": "Баталгаажсан шилдэг их сургуулиуд",
+        "desc": "Олон улсын чадавхи өндөртэй Солонгосын баталгаажсан их сургуулиудыг шалгаарай."
+      },
+      "examAndKorean": {
+        "title": "TOPIK болон Солонгос хэл",
+        "desc": "Солонгос хэлний ур чадварын шалгалт болон Солонгос хэл сурах аргуудын талаар мэдэж аваарай."
+      },
+      "expenses": {
+        "title": "Суралцах зардал",
+        "desc": "Амжилттай гадаад сургуулийн амьдралын тулд та их сургуулийн элсэлтийн төлбөрөөс гадна бусад зардлуудыг анхаарах хэрэгтэй."
+      },
+      "scholarship": {
+        "title": "Тэтгэлэгүүд",
+        "desc": "Олон улсын оюутнуудын суралцах боломжийг дэмжихийн тулд олон төрлийн тэтгэлэгүүд олгогддог."
+      },
+      "visa": {
+        "title": "Оюутны виз болон оршин суух статус",
+        "desc": "Хөтөлбөр тус бүрийн шаардлага болон виз мэдүүлэхэд шаардлагатай баримт бичгүүдийг шалгаарай."
+      },
+      "flowChart": {
+        "title": "Өргөдлийн урсгалын диаграм",
+        "desc": "Таны өргөдөл гаргахыг хүссэн их сургуулийн өргөдлийн үйл явцын талаар урьдчилан сураарай."
+      },
+      "onlineApplication": {
+        "title": "Онлайн өргөдөл",
+        "desc": "Гадаадад суралцахаар шийдсэн бол та Study in Korea-аар дамжуулан онлайнаар хялбархан өргөдөл гаргаж болно."
+      },
+      "guidebook": {
+        "title": "Гарын авлага",
+        "desc": "Суралцах бэлтгэлээс эхлээд гадаад сургуулийн амьдрал хүртэл гарын авлагаар дамжуулан тусламж аваарай."
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "Тэнхим & Их сургууль олох",
+        "desc": "Их сургууль эсвэл мэргэжлийн нэрээр хайж сонирхсон сургуулийн мэдээллийг нэгэн зэрэг олоорой."
+      },
+      "onlineKorean": {
+        "title": "Онлайн Солонгос хэл сурах",
+        "desc": "Сежон хүрээлэнгийн Солонгос соёлоор дамжуулсан Солонгос хэл болон практик Солонгос хэл зэрэг олон төрлийн онлайн сургалтын эх үүсвэрүүдийг үзээрэй."
+      },
+      "consultation": {
+        "title": "Онлайн зөвлөгөө",
+        "desc": "Бид таны асуулгад хурдан хариулдаг."
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "GKS төгсөгчдийг урих сургалт",
+        "desc": "Ирээдүйд шинэ боломжуудыг нээх үнэт боломж. Солонгосын засгийн газар тэтгэлэг дэмждэг."
+      },
+      "interview": {
+        "title": "Олон улсын оюутны ярилцлага",
+        "desc": "Би засгийн газрын тэтгэлэгтэйгээр Солонгост суралцахаар ирсэн. Солонгост маш ашигтай цагийг өнгөрөөсөн."
+      },
+      "opportunity": {
+        "title": "Солонгост суралцах боломж",
+        "desc": "Жил бүр олон улсын оюутнуудад бакалавр болон төгсөлтийн хөтөлбөрүүдэд суралцах боломжуудыг олгодог."
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "Тэнхим & их сургуулийн мэдээлэл олох",
+      "guidebook": "Гарын авлага татаж авах",
+      "certifiedUniversity": "Баталгаажсан шилдэг их сургуулиудыг шалгах",
+      "onlineApplication": "Онлайнаар хялбархан өргөдөл гаргах",
+      "topik": "TOPIK шалгалтын өргөдөл & хуваарь шалгах",
+      "scholarship": "Боломжтой тэтгэлэгүүдийг олох"
+    },
+    "cta": {
+      "title": "Аяллаа эхлүүлэхэд бэлэн үү?",
+      "description": "Өнөөдөр бидэнтэй хамт гадаад суралцах төлөвлөгөөг эхлүүлээрэй",
+      "getStarted": "Эхлүүлэх",
+      "askQuestions": "Асуулт асуух"
+    }
   }
 }
