--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -163,5 +163,102 @@
     "saving": "Saving...",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile. Please try again."
+  },
+  "planStudies": {
+    "hero": {
+      "title": "Спланируйте учёбу",
+      "subtitle": "Совсем не сложно.",
+      "description": "Подготовьте всё от выбора школы до информации о заявке на визу в Корее."
+    },
+    "sections": {
+      "planYourStudy": "Спланируйте учёбу",
+      "additionalInfo": "Узнайте больше об обучении за рубежом",
+      "stories": "Истории",
+      "quickMore": "Быстрые ссылки"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "Система образования Кореи",
+        "desc": "Система высшего образования Кореи разделена на программы бакалавриата, магистратуры и докторантуры в университетах и колледжах. Также доступны языковые программы обучения в учреждениях при университетах."
+      },
+      "schoolType": {
+        "title": "Типы школ",
+        "desc": "Если вы рассматриваете возможность обучения в Корее, ознакомьтесь с информацией о различных школах и программах."
+      },
+      "certifiedUniversity": {
+        "title": "Сертифицированные университеты",
+        "desc": "Ознакомьтесь с сертифицированными университетами в Корее с высокой способностью к интернационализации."
+      },
+      "examAndKorean": {
+        "title": "TOPIK и изучение корейского",
+        "desc": "Узнайте о тесте на знание корейского языка и способах изучения корейского."
+      },
+      "expenses": {
+        "title": "Расходы на обучение",
+        "desc": "Для успешной жизни студента за рубежом необходимо учитывать другие расходы помимо платы за обучение в университете."
+      },
+      "scholarship": {
+        "title": "Стипендии",
+        "desc": "Предоставляются различные стипендии для поддержки возможностей обучения иностранных студентов."
+      },
+      "visa": {
+        "title": "Студенческая виза и статус проживания",
+        "desc": "Проверьте право на участие в каждой программе и документы, необходимые для подачи заявки на визу."
+      },
+      "flowChart": {
+        "title": "Блок-схема подачи заявки",
+        "desc": "Заранее узнайте о процессе подачи заявки в университет, в который хотите поступить."
+      },
+      "onlineApplication": {
+        "title": "Онлайн-заявка",
+        "desc": "Как только вы решили учиться за рубежом, вы можете легко подать заявку онлайн через Study in Korea."
+      },
+      "guidebook": {
+        "title": "Справочник",
+        "desc": "Получите помощь через справочники от подготовки к учёбе до жизни студента за рубежом."
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "Найти факультет и университет",
+        "desc": "Ищите по названию университета или специальности, чтобы найти интересующую информацию о школе с первого взгляда."
+      },
+      "onlineKorean": {
+        "title": "Онлайн-изучение корейского",
+        "desc": "Обратитесь к различным онлайн-ресурсам для обучения, включая корейский через корейскую культуру и практический корейский в Институте короля Седжона."
+      },
+      "consultation": {
+        "title": "Онлайн-консультация",
+        "desc": "Мы быстро отвечаем на ваши запросы."
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "Приглашение выпускников GKS на обучение",
+        "desc": "Ценная возможность, которая откроет новые возможности для будущего. Правительство Кореи поддерживает стипендии."
+      },
+      "interview": {
+        "title": "Интервью с иностранным студентом",
+        "desc": "Я приехал учиться в Корею по государственной стипендии. Я провёл очень полезное время в Корее."
+      },
+      "opportunity": {
+        "title": "Возможность учиться в Корее",
+        "desc": "Каждый год иностранным студентам предоставляются возможности для программ бакалавриата и магистратуры."
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "Найти информацию о факультете и университете",
+      "guidebook": "Скачать справочник",
+      "certifiedUniversity": "Проверить сертифицированные университеты",
+      "onlineApplication": "Легко подать заявку онлайн",
+      "topik": "Проверить заявку и расписание экзамена TOPIK",
+      "scholarship": "Найти доступные стипендии"
+    },
+    "cta": {
+      "title": "Готовы начать своё путешествие?",
+      "description": "Начните планирование обучения за рубежом с нами сегодня",
+      "getStarted": "Начать",
+      "askQuestions": "Задать вопросы"
+    }
   }
 }
