--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -163,5 +163,102 @@
     "saving": "Saving...",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile. Please try again."
+  },
+  "planStudies": {
+    "hero": {
+      "title": "วางแผนการศึกษา",
+      "subtitle": "ไม่ยากเลย",
+      "description": "เตรียมทุกอย่างตั้งแต่การเลือกโรงเรียนไปจนถึงข้อมูลการยื่นขอวีซ่าในเกาหลี"
+    },
+    "sections": {
+      "planYourStudy": "วางแผนการศึกษาของคุณ",
+      "additionalInfo": "เรียนรู้เพิ่มเติมเกี่ยวกับการเรียนต่อต่างประเทศ",
+      "stories": "เรื่องราว",
+      "quickMore": "ลิงก์ด่วน"
+    },
+    "categories": {
+      "educationSystem": {
+        "title": "ระบบการศึกษาของเกาหลี",
+        "desc": "ระบบการศึกษาระดับอุดมศึกษาของเกาหลีแบ่งออกเป็นโปรแกรมปริญญาตรี ปริญญาโท และปริญญาเอกในมหาวิทยาลัยและวิทยาลัย โปรแกรมการฝึกอบรมภาษายังมีให้บริการที่สถาบันในเครือมหาวิทยาลัย"
+      },
+      "schoolType": {
+        "title": "ประเภทของโรงเรียน",
+        "desc": "หากคุณกำลังพิจารณาเรียนต่อในเกาหลี ตรวจสอบข้อมูลและโปรแกรมของโรงเรียนต่างๆ"
+      },
+      "certifiedUniversity": {
+        "title": "มหาวิทยาลัยที่ได้รับการรับรอง",
+        "desc": "ตรวจสอบมหาวิทยาลัยที่ได้รับการรับรองในเกาหลีที่มีความสามารถด้านการเป็นนานาชาติสูง"
+      },
+      "examAndKorean": {
+        "title": "TOPIK และการเรียนภาษาเกาหลี",
+        "desc": "เรียนรู้เกี่ยวกับการทดสอบความสามารถทางภาษาเกาหลีและวิธีการเรียนภาษาเกาหลี"
+      },
+      "expenses": {
+        "title": "ค่าใช้จ่ายในการศึกษา",
+        "desc": "เพื่อชีวิตการเรียนต่อต่างประเทศที่ประสบความสำเร็จ คุณต้องพิจารณาค่าใช้จ่ายอื่นๆ นอกเหนือจากค่าเล่าเรียนมหาวิทยาลัย"
+      },
+      "scholarship": {
+        "title": "ทุนการศึกษา",
+        "desc": "มีทุนการศึกษาหลากหลายประเภทเพื่อสนับสนุนโอกาสในการศึกษาของนักศึกษาต่างชาติ"
+      },
+      "visa": {
+        "title": "วีซ่านักเรียนและสถานะการพำนัก",
+        "desc": "ตรวจสอบคุณสมบัติสำหรับแต่ละโปรแกรมและเอกสารที่จำเป็นสำหรับการยื่นขอวีซ่า"
+      },
+      "flowChart": {
+        "title": "ผังงานการสมัคร",
+        "desc": "เรียนรู้ล่วงหน้าเกี่ยวกับกระบวนการสมัครของมหาวิทยาลัยที่คุณต้องการสมัคร"
+      },
+      "onlineApplication": {
+        "title": "การสมัครออนไลน์",
+        "desc": "เมื่อคุณตัดสินใจเรียนต่อต่างประเทศแล้ว คุณสามารถสมัครออนไลน์ได้อย่างง่ายดายผ่าน Study in Korea"
+      },
+      "guidebook": {
+        "title": "คู่มือ",
+        "desc": "รับความช่วยเหลือผ่านคู่มือตั้งแต่การเตรียมตัวเรียนไปจนถึงชีวิตการเรียนต่อต่างประเทศ"
+      }
+    },
+    "additional": {
+      "findSchool": {
+        "title": "ค้นหาภาควิชาและมหาวิทยาลัย",
+        "desc": "ค้นหาตามชื่อมหาวิทยาลัยหรือสาขาวิชาเพื่อค้นหาข้อมูลโรงเรียนที่น่าสนใจได้ในทันที"
+      },
+      "onlineKorean": {
+        "title": "การเรียนภาษาเกาหลีออนไลน์",
+        "desc": "อ้างอิงแหล่งเรียนรู้ออนไลน์ต่างๆ รวมถึงภาษาเกาหลีผ่านวัฒนธรรมเกาหลีและภาษาเกาหลีเชิงปฏิบัติที่สถาบันพระเจ้าเซจง"
+      },
+      "consultation": {
+        "title": "ให้คำปรึกษาออนไลน์",
+        "desc": "เราตอบคำถามของคุณอย่างรวดเร็ว"
+      }
+    },
+    "stories": {
+      "gks": {
+        "title": "การฝึกอบรมเชิญศิษย์เก่า GKS",
+        "desc": "โอกาสอันมีค่าที่จะเปิดความเป็นไปได้ใหม่ๆ สำหรับอนาคต รัฐบาลเกาหลีสนับสนุนทุนการศึกษา"
+      },
+      "interview": {
+        "title": "สัมภาษณ์นักศึกษาต่างชาติ",
+        "desc": "ฉันมาเรียนในเกาหลีด้วยทุนการศึกษาจากรัฐบาล ฉันใช้เวลาที่เป็นประโยชน์มากในเกาหลี"
+      },
+      "opportunity": {
+        "title": "โอกาสในการเรียนในเกาหลี",
+        "desc": "มีโอกาสให้กับนักศึกษาต่างชาติสำหรับโปรแกรมปริญญาตรีและบัณฑิตศึกษาทุกปี"
+      }
+    },
+    "quickLinks": {
+      "findUniversity": "ค้นหาข้อมูลภาควิชาและมหาวิทยาลัย",
+      "guidebook": "ดาวน์โหลดคู่มือ",
+      "certifiedUniversity": "ตรวจสอบมหาวิทยาลัยที่ได้รับการรับรอง",
+      "onlineApplication": "สมัครออนไลน์ได้อย่างง่ายดาย",
+      "topik": "ตรวจสอบการสมัครและตารางสอบ TOPIK",
+      "scholarship": "ค้นหาทุนการศึกษาที่มีอยู่"
+    },
+    "cta": {
+      "title": "พร้อมที่จะเริ่มต้นการเดินทางของคุณแล้วหรือยัง?",
+      "description": "เริ่มวางแผนการเรียนต่อต่างประเทศกับเราวันนี้",
+      "getStarted": "เริ่มต้น",
+      "askQuestions": "ถามคำถาม"
+    }
   }
 }
